@@ -245,3 +245,5 @@ October 24, 2002:
 *******************************************************************************************
 
 (93) doc/Makefile.am:4  Removed trailing backslash and added an empty last line
+
+(94) src/freeglut_window.c  Windowing fixes from John F.
